# georges-core

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  code_check.yml  coverage.yml  deploy_doc.yml  develop.yml  docker-publish.yml  documentation.yml
docs/: Makefile  authors.md  authors.rst  changelog.rst  conf.py  contributing.rst  distribution.rst  examples.rst  index.rst  installation.rst  madx.rst  modules.rst  support.rst  usage.rst
docs/api/: georges_core.codes_io.rst  georges_core.madx.rst  georges_core.rst  georges_core.sequences.rst  georges_core.vis.rst  modules.rst
docs/examples/: converters.rst  sequence.rst
docs/examples/bdsim_output/: bdsim_output_example_01.ipynb
docs/examples/converter/: converter.ipynb
docs/examples/converter/BDSIM/: output.root
docs/examples/converter/MADNG/: example_madng.mad
docs/examples/sequences/: sequences_example_01.ipynb
docs/modules/: distribution.rst  geometry.rst  kinematics.rst  madx.rst  particles.rst  plotting.rst  twiss.rst
examples/bdsim_output/: bdsim_output_example_01.ipynb
examples/converter/: converter.ipynb  survey_sequence.ipynb
examples/converter/BDSIM/: output.root  sm.gmad
examples/converter/CSV/: survey.csv
examples/converter/MADNG/: example_madng.mad  twiss_madng.tfs
examples/converter/MADX/: twiss_madx.tfs
examples/converter/TRANSPORT/: calc.bml  calc.rms
examples/sequences/: survey_sequence.ipynb
examples/visualization/: plot_cartouche.ipynb
georges_core/: __init__.py  distribution.py  frame.py  geometry.py  histograms.py  kinematics.py  particles.py  patchable.py  twiss.py  units.py  utils.py
georges_core/codes_io/: __init__.py  bdsim.py  csv.py  mad.py  madng.py  madx.py  transport.py
georges_core/io/: transport.py
georges_core/madx/: __init__.py  madx.py
georges_core/outputs/: __init__.py  madx.py  transport.py
georges_core/sequences/: __init__.py  betablock.py  elements.py  sequence.py
georges_core/vis/: __init__.py  artist.py  gnuplot.py  matplotlib.py  plotly.py  vtk_utils.py
tests/: test_distribution.py  test_frame.py  test_geometry.py  test_kinematics.py  test_madx.py  test_sequence.py  test_twiss.py  test_utils.py  test_vtk.py
