[tool.poetry]
name = "georges-core"
version = "0.1.0"
description = ""
authors = ["Cédric Hernalsteens <cedric.hernalsteens@ulb.be>",
           "Robin Tesse <robin.tesse@ulb.be>",
           "Eustache Gnacadja <eustache.gnacadja@ulb.be>",
           "Eliott Ramoisiaux <eliott.ramoisiaux@ulb.be>",
           "Marion Vanwelde <marion.vanwelde@ulb.be>"]


[tool.poetry.dependencies]
python = ">3.8.1 <3.10"
boost-histogram = "^1.0.2"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
Pint = "^0.17"
uproot = "^4.0.8"
vtk = "^9.0.1"
plotly = "^4.14.3"
pandas = "^1.2.4"
numpy-quaternion = "^2021.4.5"
numba = "^0.53.1"
scipy = "^1.6.3"
PyYAML = "^5.4.1"
mergedeep = "^1.3.4"
awkward = "^1.4.0"
pyarrow = "^5.0.0"
fastparquet = "^0.7.1"
cpymad = "^1.9.3"
pytest-cov = "^3.0.0"

pybdsim = { git = "https://bitbucket.org/jairhul/pybdsim", branch = "feature_uproot" }

sphinx = { version = "^4.0.2", optional = true }
sphinx-material = { version = "^0.0.34", optional = true }
sphinx-automodapi = { version = "^0.13", optional = true }
sphinxcontrib-bibtex = { version = "^2.2.0", optional = true }
sphinx-copybutton = { version = "^0.3.1", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinx-rtd-theme = {version = "^0.5.2", optional = true}
m2r2 = { version = "^0.2.7", optional = true }
pandoc = { version = "^1.0.2", optional = true }
nbsphinx = { version = "^0.8.2", optional = true }
ipython = { version = "^7.24.1", optional = true }
pytest = { version = "^6.2.2", optional = true }
pytest-bdd = { version = "^4.0.2", optional = true }


[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
flake8 = "^4.0.1"

[tool.poetry.extras]
sphinx = [
    "sphinx",
    "sphinx-material",
    "sphinx-automodapi",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
    "m2r2",
    "pandoc",
    "nbsphinx",
    "ipython",
    "pytest",
    "pytest-bdd",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
