[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning:"
]
addopts = "--doctest-modules --ignore=externals --ignore=docs"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
string_normalization = true
magic_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true
extend_skip = ["georges_core/__init__.py"]

[tool.flake8]
ignore = ['E231', 'E241', 'W503', 'E203']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true
exclude = ['docs/**', '.tox/**', '.venv/**']

[tool.pylint]
max-line-length = 120
disable = ['C0103', 'R0914', 'R0913', 'W0707', 'C0302']

[tool.mypy]
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = "ignore-without-code"
strict = true
# TODO: Remove this once pytest has annotations
disallow_untyped_decorators = false
disable_error_code = "attr-defined"
plugins = "numpy.typing.mypy_plugin"
exclude = ["docs", "tests"]

[tool.poetry]
name = "georges-core"
version = "2023.1"
description = "Georges' accelerator physics library - Core"
authors = ["Cédric Hernalsteens <cedric.hernalsteens@ulb.be>",
           "Robin Tesse <robin.tesse@ulb.be>",
           "Eustache Gnacadja <eustache.gnacadja@ulb.be>",
           "Eliott Ramoisiaux <eliott.ramoisiaux@ulb.be>",
           "Marion Vanwelde <marion.vanwelde@ulb.be>"]

[tool.poetry.dependencies]
python = ">3.8.1 <3.11"
awkward = "2.1.1"
awkward-pandas = "2022.12a1"
boost-histogram = "1.3.2"
cpymad = "1.13.0"
fastparquet = "2023.2.0"
ipykernel = "6.22.0"
ipyparallel = "8.5.0"
jupyterlab = "3.6.2"
jupyterlab-code-formatter = "1.5.3"
matplotlib = "3.7.1"
mergedeep = "1.3.4"
nbdime = "3.1.1"
numba = "0.56.3" # DO NOT CHANGE THE VERSION (FOR INTEL-MKL)
numpy = "1.22.3" # DO NOT CHANGE THE VERSION (FOR INTEL-MKL)
numpy-quaternion = "2022.4.3"
pandas = "1.5.1" # DO NOT CHANGE THE VERSION (FOR INTEL-MKL)
Pint = "0.20.1"
plotly = "5.13.1"
pyarrow = "11.0.0"
pybdsim = "3.0.1"
PyYAML = "6.0"
scipy = "1.7.3" # DO NOT CHANGE THE VERSION (FOR INTEL-MKL)
uproot = "5.0.5"
vtk = "9.2.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "22.10.0"}
coverage = {extras = ["toml"], version = "6.5.0"}
flake8 = "6.0.0"
flake8-pyproject = "1.2.2"
isort = "5.12.0"
mypy = "0.991"
pre-commit = "2.21.0"
pylint = "2.15.2"
pytest = "7.2.0"

[tool.poetry.group.docs.dependencies]
cairosvg = "2.5.2"
jupyter-sphinx = "0.4.0"
jupyter-server-mathjax = "0.2.6"
m2r2 =  "0.2.8"
nbsphinx =  "0.8.2"
pandoc =  "1.1.0"
sphinx = "5.3.0"
sphinx-material =  "0.0.35"
sphinx-automodapi =  "0.14.1"
sphinxcontrib-bibtex =  "2.2.0"
sphinx-copybutton =  "0.5.1"
sphinx-autobuild =  "2021.3.14"
sphinx-rtd-theme = "1.1.1"
sphinxcontrib-svg2pdfconverter = {extras = ["cairosvg"], version = "1.2.1"}

[tool.coverage.run]
branch = true
relative_files = true
source = ["georges_core"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    'raise NotImplementedError',
    'except KeyError',
    'if 0:',
    'if __name__ == .__main__.:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    ]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
